FIX: Change primary color of the dark mode (#143)
* fixed button color on light theme fixes #97


* customised light colors for dark mode

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -20,10 +20,6 @@
   font-family: 'Poppins', sans-serif;
 }
 
-html[data-theme='light'] .button.button--secondary.button--outline:not(.button--active):not(:hover)  {
-  color: #f5f6f7;
-}
-
 .docusaurus-highlight-code-line {
   background-color: rgb(72, 77, 91);
   display: block;
@@ -59,6 +55,13 @@ html[data-theme='light'] .button.button--secondary.button--outline:not(.button--
   font-weight: bold;
 }
 
+/* Custom Light */
+
+html[data-theme='light']
+  .button.button--secondary.button--outline:not(.button--active):not(:hover) {
+  color: #f5f6f7;
+}
+
 html[data-theme='light'] {
   background-color: #e3f2e8;
   color: #2e382b;
@@ -83,6 +86,19 @@ html[data-theme='light'] .footer {
 
 html[data-theme='light'] .footer__link-item {
   color: #e3f2e8;
+}
+
+/* Custom Dark */
+
+html[data-theme='dark'] {
+  --ifm-color-primary: #73e8a3;
+}
+
+html[data-theme='dark'] .footer__link-item {
+  color: #e3f2e8;
+}
+html[data-theme='dark'] .footer__link-item:hover {
+  color: #73e8a3;
 }
 
 @media only screen and (max-width: 996px) {
